syntax = "proto3";

package order;

option go_package = "northwind/proto/order";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";


service Order {
    
    rpc Customer(CustomerRequest) returns (typespb.Customer) {
        option (google.api.http) = {
            get: "/v1/order/{orderID}/customer"
            
        };
    }
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/order/{orderID}"
            
        };
    }
    
    rpc Employee(EmployeeRequest) returns (typespb.Employee) {
        option (google.api.http) = {
            get: "/v1/order/{orderID}/employee"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/order"
            body: "*"
            
        };
    }
    
    rpc OrderByOrderID(OrderByOrderIDRequest) returns (typespb.Order) {
        option (google.api.http) = {
            get: "/v1/order/{orderID}"
            
        };
    }
    
    rpc Shipper(ShipperRequest) returns (typespb.Shipper) {
        option (google.api.http) = {
            get: "/v1/order/{orderID}/shipper"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/order/{orderID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/order/upsert"
            body: "*"
            
        };
    }
    
}

message CustomerRequest { 
    int32 orderID = 1;
}

message DeleteRequest { 
    int32 orderID = 1;
}

message EmployeeRequest { 
    int32 orderID = 1;
}

message InsertRequest { 
    google.protobuf.StringValue customerID = 1;
    google.protobuf.Int64Value employeeID = 2;
    google.protobuf.DoubleValue freight = 3;
    google.protobuf.Timestamp orderDate = 4;
    int32 orderID = 5;
    google.protobuf.Timestamp requiredDate = 6;
    google.protobuf.StringValue shipAddress = 7;
    google.protobuf.StringValue shipCity = 8;
    google.protobuf.StringValue shipCountry = 9;
    google.protobuf.StringValue shipName = 10;
    google.protobuf.StringValue shipPostalCode = 11;
    google.protobuf.StringValue shipRegion = 12;
    google.protobuf.Int64Value shipVia = 13;
    google.protobuf.Timestamp shippedDate = 14;
}

message OrderByOrderIDRequest { 
    int32 orderID = 1;
}

message ShipperRequest { 
    int32 orderID = 1;
}

message UpdateRequest { 
    google.protobuf.StringValue customerID = 1;
    google.protobuf.Int64Value employeeID = 2;
    google.protobuf.DoubleValue freight = 3;
    google.protobuf.Timestamp orderDate = 4;
    // Output only.
    int32 orderID = 5;
    google.protobuf.Timestamp requiredDate = 6;
    google.protobuf.StringValue shipAddress = 7;
    google.protobuf.StringValue shipCity = 8;
    google.protobuf.StringValue shipCountry = 9;
    google.protobuf.StringValue shipName = 10;
    google.protobuf.StringValue shipPostalCode = 11;
    google.protobuf.StringValue shipRegion = 12;
    google.protobuf.Int64Value shipVia = 13;
    google.protobuf.Timestamp shippedDate = 14;
}

message UpsertRequest { 
    google.protobuf.StringValue customerID = 1;
    google.protobuf.Int64Value employeeID = 2;
    google.protobuf.DoubleValue freight = 3;
    google.protobuf.Timestamp orderDate = 4;
    int32 orderID = 5;
    google.protobuf.Timestamp requiredDate = 6;
    google.protobuf.StringValue shipAddress = 7;
    google.protobuf.StringValue shipCity = 8;
    google.protobuf.StringValue shipCountry = 9;
    google.protobuf.StringValue shipName = 10;
    google.protobuf.StringValue shipPostalCode = 11;
    google.protobuf.StringValue shipRegion = 12;
    google.protobuf.Int64Value shipVia = 13;
    google.protobuf.Timestamp shippedDate = 14;
}
