syntax = "proto3";

package order_detail;

option go_package = "northwind/proto/order_detail";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "northwind";
        version: "1.0";
        description: "Boilerplate code generated by xo-grpc. Modify proto/*.proto files then run 'compile.sh' script on proto directory to change the services interface.";
        contact: {
            name: "xo-grpc - Walter Wanderley";
            url: "https://github.com/walterwanderley/xo-grpc";
        };
    };
};
service OrderDetail {
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/order-detail"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/order-detail"
            body: "*"
            
        };
    }
    
    rpc Order(OrderRequest) returns (typespb.Order) {
        option (google.api.http) = {
            get: "/v1/order-detail/order/{OrderID}"
            
        };
    }
    
    rpc OrderDetailByOrderIDProductID(OrderDetailByOrderIDProductIDRequest) returns (typespb.OrderDetail) {
        option (google.api.http) = {
            get: "/v1/order-detail"
            
        };
    }
    
    rpc Product(ProductRequest) returns (typespb.Product) {
        option (google.api.http) = {
            get: "/v1/order-detail/product/{ProductID}"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/order-detail"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/order-detail/upsert"
            body: "*"
            
        };
    }
    
}

message DeleteRequest { 
    int32 OrderID = 1;
    int32 ProductID = 2;
}

message InsertRequest { 
    float Discount = 1;
    int32 OrderID = 2;
    int32 ProductID = 3;
    int32 Quantity = 4;
    float UnitPrice = 5;
}

message OrderRequest { 
    int32 OrderID = 1;
}

message OrderDetailByOrderIDProductIDRequest { 
    int32 orderID = 1;
    int32 productID = 2;
}

message ProductRequest { 
    int32 ProductID = 1;
}

message UpdateRequest { 
    float Discount = 1;
    int32 OrderID = 2;
    int32 ProductID = 3;
    int32 Quantity = 4;
    float UnitPrice = 5;
}

message UpsertRequest { 
    float Discount = 1;
    int32 OrderID = 2;
    int32 ProductID = 3;
    int32 Quantity = 4;
    float UnitPrice = 5;
}
